[gd_scene load_steps=8 format=3 uid="uid://digx65pyynjpl"]

[ext_resource type="Script" path="res://Scripts/king-frostbite.gd" id="1_pmrh8"]
[ext_resource type="Texture2D" uid="uid://c3a2wpi03hah6" path="res://randomAssets/BonecoDeNeve.png" id="2_4og4w"]
[ext_resource type="PackedScene" uid="uid://cdn4csyqllher" path="res://Scenes/snowball.tscn" id="2_a0pgr"]
[ext_resource type="PackedScene" path="res://Scenes/hammer.tscn" id="3_pxuga"]
[ext_resource type="PackedScene" uid="uid://dxrj3u52hv501" path="res://Scenes/freezed_area.tscn" id="4_gpkot"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_opkhf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ssp4i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4og4w")
}],
"loop": true,
"name": &"breath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4og4w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="King-Frostbite" type="CharacterBody2D"]
script = ExtResource("1_pmrh8")
bullet_scene = ExtResource("2_a0pgr")
hammer = ExtResource("3_pxuga")
freezing = ExtResource("4_gpkot")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_opkhf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ssp4i")
animation = &"breath"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ArremessoDoMartelo" type="Timer" parent="."]

[node name="Shoot" type="Timer" parent="."]

[node name="ArremessoEm2Seg" type="Timer" parent="."]

[node name="GettingHammer" type="Timer" parent="."]

[connection signal="timeout" from="ArremessoDoMartelo" to="." method="_on_arremesso_do_martelo_timeout"]
[connection signal="timeout" from="Shoot" to="." method="_on_shoot_timeout"]
[connection signal="timeout" from="ArremessoEm2Seg" to="." method="_on_arremesso_em_2_seg_timeout"]
[connection signal="timeout" from="GettingHammer" to="." method="_on_getting_hammer_timeout"]
